--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "lexik/jwt-authentication-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.3",
         "ramsey/uuid": "^3.8",
         "ramsey/uuid-doctrine": "^1.5",
+        "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/debug": "*",
         "symfony/flex": "^1.1",
@@ -18,6 +20,7 @@
         "symfony/security": "*",
         "symfony/security-bundle": "*",
         "symfony/serializer": "*",
+        "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/yaml": "*"
     },
