--- a/config/serializer/serializer_user.yaml
+++ b/config/serializer/serializer_user.yaml
@@ -4,5 +4,7 @@ App\Domain\Entity\User:
             groups: ['users_list', 'user']
         email:
             groups: ['users_list', 'user']
+        phoneNumber:
+            groups: ['user']
         createdAt:
             groups: ['users_list']
