--- a/src/Domain/DataFixtures/Fixtures/Phone.yaml
+++ b/src/Domain/DataFixtures/Fixtures/Phone.yaml
@@ -1,23 +1,23 @@
 phone_0:
-    Brand: Samsung
+    Manufacturer: manufacturer_1
     Model: S10
     Description: Le meilleur Samsumg
     Price: 1599
     Stock: 56
 phone_1:
-    Brand: Apple
+    Manufacturer: manufacturer_0
     Model: iPhone X
     Description: Le meilleur iPhone
     Price: 1399
     Stock: 12
 phone_2:
-    Brand: Samsung
+    Manufacturer: manufacturer_1
     Model: S10
     Description: Le meilleur Samsumg
     Price: 1499
     Stock: 36
 phone_3:
-    Brand: Samsung
+    Manufacturer: manufacturer_1
     Model: X20
     Description: Le deuxième meilleur Samsumg
     Price: 999
