Logic into User's and Phone's Actions, when it was identical, has been removed and put in unique Entityfactories. Reduction of duplicates

--- a/config/validator/user.yaml
+++ b/config/validator/user.yaml
@@ -3,10 +3,14 @@ App\Domain\Entity\User:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
             fields: [username]
-            message: 'This username already exists on database'
+            message: This username {{ value }} already exists on database
             groups:
                 - user
-
+        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
+            fields: [email]
+            message: This email {{ value }} already exists on database
+            groups:
+                - user
 
     properties:
 
