--- a/src/Domain/DataFixtures/Fixtures/User.yaml
+++ b/src/Domain/DataFixtures/Fixtures/User.yaml
@@ -2,17 +2,15 @@ user_0:
     Username: User0
     Password: password0
     Email: user0@mail.com
-    Reference:
-        Phones: ~
 user_1:
     Username: User1
     Password: password1
     Email: user1@mail.com
-    Reference:
-        Phones: ~
 user_2:
     Username: User2
     Password: password2
     Email: user2@mail.com
-    Reference:
-        Phones: ~
+user_3:
+    Username: RegularUser
+    Password: OpenClassrooms
+    Email: user1@mail.com
