--- a/src/Domain/DataFixtures/Fixtures/User.yaml
+++ b/src/Domain/DataFixtures/Fixtures/User.yaml
@@ -13,4 +13,4 @@ user_2:
 user_3:
     Username: RegularUser
     Password: OpenClassrooms
-    Email: user1@mail.com
+    Email: RegularUser@mail.com
