--- a/src/Domain/DataFixtures/Fixtures/Phone.yaml
+++ b/src/Domain/DataFixtures/Fixtures/Phone.yaml
@@ -1,24 +1,24 @@
 phone_0:
     Manufacturer: manufacturer_1
-    Model: S10
-    Description: Le meilleur Samsumg
+    Model: G10
+    Description: Danaes Sandan quem ex et mors dolorum profectus Danaes vero conmilitio et ex et direpto.
     Price: 1599
     Stock: 56
 phone_1:
     Manufacturer: manufacturer_0
-    Model: iPhone X
-    Description: Le meilleur iPhone
+    Model: iPhone W
+    Description: Quod intractato montuosis eo iis vetustatis inanima in consuevit silvestribus impediat suo commorati consuetudinis vetustas.
     Price: 1399
     Stock: 12
 phone_2:
     Manufacturer: manufacturer_1
-    Model: S10
-    Description: Le meilleur Samsumg
+    Model: H20
+    Description: Vastabantur confines terrae et Constantius fratres Gundomadum Alamannorum reges reserato ter reges egressus limitibus et limitibus caeli terrae et Gundomadum.
     Price: 1499
     Stock: 36
 phone_3:
     Manufacturer: manufacturer_1
     Model: X20
-    Description: Le deuxième meilleur Samsumg
+    Description: Magna sed igitur igitur stataria campestrem populationum caedium per Lycaoniam.
     Price: 999
     Stock: 63
